# finebuffs

./: .gitignore  README.md  render.yaml
backend/: .env.example  generate_qr_codes.py  main.py  pyproject.toml  setup.py  test_setup.py
frontend/: .env.example  package-lock.json  package.json
frontend/public/: _redirects  index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: AddProduct.tsx  Dashboard.tsx  PerformanceMonitor.tsx  ProductDetail.tsx  ProductList.tsx  QRScanner.tsx  TransactionHistory.tsx
frontend/src/services/: performanceService.ts  performanceTestRunner.ts  supabaseService.ts
frontend/src/types/: index.ts
frontend/src/utils/: supabase.ts
supabase/: data_backup.sql  schema_backup.sql
